# VerVectorDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: datawhale.txt
examples/: datawhale.py
scripts/: model_download.sh
vervectordb/: __init__.py
